--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .task-add-wrapper {
   display: flex;
@@ -117,7 +117,7 @@ ul {
   width: 226px;
 }
 .list-item > .task-input {
-  width: 226px
+  width: 226px;
 }
 .del-img {
   height: 2em;
@@ -130,17 +130,17 @@ ul {
 
 /* Completed */
 .label-completed {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .list-item input[type=text] {
-  display: none
+  display: none;
 }
 .edit-mode input[type=text] {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 .edit-mode-label {
   display: none;
