--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   color: #333;
   font-family: Lato, sans-serif;
 }
-.h1none {
+.eisenhower-matrix__h1none {
   display: none;
 }
 .eisenhower-matrix {
@@ -13,10 +13,10 @@
   display: block;
   text-align: right;
 }
-.matrix-img {
+.eisenhower-matrix__img {
   width: 100%;
 }
-.more-inf {
+.eisenhower-matrix__more-inf {
   font-family: fantasy, cursive;
 }
 
@@ -35,23 +35,22 @@
   display: inline-block;
   flex-grow: 1;
 }
-.task-add-wrapper {
+.add-task__wrapper {
   display: flex;
 }
 ul {
   margin: 0;
   padding: 0px;
 }
-.list-item,
-.title-todo,
-.title-completed {
+.tasks__list-item,
+.objectives__title {
   list-style: none;
 }
-.btn,
+.tasks__btn,
 input {
   outline: none;
 }
-.btn {
+.tasks__btn {
   background: none;
   border: 0px;
   color: #888;
@@ -60,14 +59,13 @@ input {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-.btn:hover {
+.tasks__btn:hover {
   color: #3a3a3a;
 }
 
 /* Heading */
-.title-todo,
-.title-completed,
-.add-task-label {
+.objectives__title,
+.add-task__label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -76,7 +74,8 @@ input {
   margin: 0;
   text-transform: uppercase;
 }
-.task-input {
+.task-input,
+.tasks__input-text {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -88,12 +87,13 @@ input {
   font-family: Lato, sans-serif;
   color: #888;
 }
+.tasks__input-text:focus,
 .task-input:focus {
   color: #333;
 }
 
 /* New Task */
-.add-task-label {
+.add-task__label {
   display: block;
   margin: 0 0 20px;
 }
@@ -102,7 +102,7 @@ input {
 }
 
 /* Task list */
-.list-item {
+.tasks__list-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -110,28 +110,28 @@ input {
   justify-content: space-between;
   align-items: center;
 }
-.list-item > * {
+.tasks__list-item > * {
   vertical-align: middle;
 }
 
-.li-item-checkbox {
+.tasks__checkbox {
   margin: 0 10px;
 }
-.list-item-label {
+.tasks__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-.list-item > .task-input {
+.tasks__list-item > .tasks__input-text {
   width: 226px;
 }
-.del-img {
+.tasks__del-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-.del-img:hover {
+.tasks__del-img:hover {
   transform: rotateZ(0);
 }
 
@@ -142,7 +142,7 @@ input {
 }
 
 /* Edit Task */
-.list-item input[type="text"] {
+.tasks__list-item input[type="text"] {
   display: none;
 }
 .edit-mode input[type="text"] {
