--- a/style.css
+++ b/style.css
@@ -47,10 +47,12 @@ ul {
   list-style: none;
 }
 .tasks__btn,
+.btn,
 input {
   outline: none;
 }
-.tasks__btn {
+.tasks__btn,
+.btn {
   background: none;
   border: 0px;
   color: #888;
@@ -59,6 +61,10 @@ input {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
+.btn:hover {
+  color: #3a3a3a;
+}
+
 .tasks__btn:hover {
   color: #3a3a3a;
 }
